Use TextBox instead of TextBlock for displaying read only properties since TextBlock doesn't support control templates
TextBlock WPF control doesn't support overriding it's control template from styles. Instead use a TextBox control with a default style which  uses TextBlock as control template instead so that style can be customized as per requirement.

--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/PropertyGrid/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/PropertyGrid/Themes/Generic.xaml
@@ -286,7 +286,20 @@
             Value="Gray" />
   </Style>
 
-  <!-- PropertyGrid MaskedTextBox Editors -->
+    <!-- PropertyGrid ReadOnly TextBox Editor -->
+   <Style TargetType="{x:Type editor:PropertyGridReadOnlyTextBoxEditor}" BasedOn="{StaticResource {x:Type TextBox}}">
+       <Setter Property="Foreground" Value="Gray" />
+       <Setter Property="Template">
+           <Setter.Value>
+               <ControlTemplate>
+                   <TextBlock TextTrimming="CharacterEllipsis" Margin="5,0,0,0" Text="{Binding Path=Value}"></TextBlock>
+               </ControlTemplate>
+           </Setter.Value>
+       </Setter>
+   </Style>
+
+
+    <!-- PropertyGrid MaskedTextBox Editors -->
   <Style TargetType="{x:Type editor:PropertyGridEditorMaskedTextBox}"
          BasedOn="{StaticResource {x:Type TextBox}}">
   </Style>
