--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit.LiveExplorer/Samples/BusyIndicator/Resources/Common.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit.LiveExplorer/Samples/BusyIndicator/Resources/Common.xaml
@@ -19,7 +19,8 @@
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
 
    <DataTemplate x:Key="SampleContent">
-      <Grid Margin="10">
+      <Grid Margin="10"
+          TextElement.Foreground="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}">
          <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
