--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/Magnifier/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/Magnifier/Themes/Generic.xaml
@@ -64,6 +64,11 @@
          <Trigger Property="FrameType" Value="Rectangle">
             <Setter Property="Template" Value="{StaticResource RectangleTemplate}" />
          </Trigger>
+      <Trigger Property="IsEnabled"
+               Value="False">
+        <Setter Property="Template"
+                Value="{x:Null}" />
+      </Trigger>
       </Style.Triggers>
    </Style>
 
