--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock.Themes.Aero/Theme.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock.Themes.Aero/Theme.xaml
@@ -131,7 +131,6 @@
                         CornerRadius="2">
                   <ContentPresenter x:Name="PART_SelectedContentHost"
                                     ContentSource="SelectedContent"
-                                    ContentTemplate="{TemplateBinding ContentTemplate}"
                                     SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                 </Border>
               </Border>
@@ -324,7 +323,6 @@
                     KeyboardNavigation.TabNavigation="Cycle">
               <ContentPresenter x:Name="PART_SelectedContentHost"
                                 ContentSource="SelectedContent"
-                                ContentTemplate="{TemplateBinding ContentTemplate}"
                                 Margin="{TemplateBinding Padding}"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
             </Border>
@@ -509,7 +507,7 @@
                       HorizontalAlignment="Center"
                       Command="{Binding Path=LayoutItem.HideCommand, RelativeSource={RelativeSource TemplatedParent}}"
                       Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
-                      ToolTip="{x:Static avalonDockProperties:Resources.Anchorable_BtnClose_Hint}">
+                      ToolTip="{x:Static avalonDockProperties:Resources.Anchorable_Hide}">
                 <Image x:Name="PART_ImgHidePin"
                        Source="Images/PinClose_Dark.png" >
                 </Image>
