--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit.LiveExplorer/Samples/Panels/Views/SwitchPanelView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit.LiveExplorer/Samples/Panels/Views/SwitchPanelView.xaml
@@ -185,8 +185,8 @@
              </TextBlock>
          </StackPanel>
 
-         <GroupBox Header="WrapPanel Toolbox" 
-                   Background="White"
+         <GroupBox Header="WrapPanel Toolbox"
+                   Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
                    Grid.Row="3" 
                    Visibility="{Binding SelectedIndex, ElementName=layoutCombo, Converter={StaticResource comboBoxToVisibilityConverter}, ConverterParameter=0}" 
                    Margin="10" >
@@ -250,8 +250,8 @@
             </StackPanel>
         </GroupBox>
 
-         <GroupBox Header="RandomPanel Toolbox" 
-                   Background="White"
+         <GroupBox Header="RandomPanel Toolbox"
+                   Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
                    Grid.Row="3" 
                    Visibility="{Binding SelectedIndex, ElementName=layoutCombo, Converter={StaticResource comboBoxToVisibilityConverter}, ConverterParameter=1}" 
                    Margin="10" >
