--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/MultiLineTextEditor/Themes/Aero2.NormalColor.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/MultiLineTextEditor/Themes/Aero2.NormalColor.xaml
@@ -30,11 +30,10 @@
 
   <conv:InverseBoolConverter x:Key="InverseBoolConverter" />
 
-  <Image x:Key="DefaultContent"
-         x:Shared="False"
-         Height="16"
-         Width="18"
-         Source="./../Images/Notes16.png" />
+  <TextBlock x:Key="DefaultContent"
+              Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type local:MultiLineTextEditor}}}"
+              TextWrapping="Wrap"
+              TextTrimming="CharacterEllipsis" />
 
   <Style x:Key="ToggleButtonStyle"
          TargetType="ToggleButton">
@@ -211,6 +210,11 @@
                Value="True">
         <Setter Property="BorderBrush"
                 Value="{DynamicResource {x:Static themes:ResourceKeys.ControlSelectedBorderKey}}" />
+      </Trigger>
+      <Trigger Property="IsEnabled"
+               Value="False">
+        <Setter Property="TextElement.Foreground"
+                Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
       </Trigger>
     </Style.Triggers>
   </Style>
