--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/MultiLineTextEditor/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/MultiLineTextEditor/Themes/Generic.xaml
@@ -28,11 +28,10 @@
 
   <conv:InverseBoolConverter x:Key="InverseBoolConverter" />
 
-  <Image x:Key="DefaultContent"
-         x:Shared="False"
-         Height="16"
-         Width="18"
-         Source="./../Images/Notes16.png" />
+  <TextBlock x:Key="DefaultContent"
+             Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type local:MultiLineTextEditor}}}"
+             TextWrapping="Wrap"
+             TextTrimming="CharacterEllipsis" />
 
   <LinearGradientBrush x:Key="PopupDarkBorderBrush"
                        EndPoint="0.5,1"
